<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.5">
  <GVL Name="GVL_IO_EL" Id="{f6734b22-f955-4049-a3ec-9e44533283a9}">
    <Declaration><![CDATA[VAR_GLOBAL
(*
(**************************************************************************)
(*VerticalL IO *)

IW_341DI1					AT %IB300:WORD;						    
I_EX_BotCV_Ctn_PE			AT %IX300.0	:BOOL;	 (* 	ERECTOR CARTON PRESENCE AT  BOTTOM EXIT CV. SENSOR SHOULD BE OFF FOR ELEVATOR TO MOVE.	*)
I_EX_TopCV_Ctn_PE			AT %IX300.1	:BOOL;	 (* 	ERECTOR CARTON PRESENCE AT  TOP EXIT CV. SENSOR SHOULD BE OFF FOR ELEVATOR TO MOVE.	*)
I_LC_SC_OK					AT %IX300.2	:BOOL;	 (* 	VERTICAL EXIT LIGHT CURTAIN OK	*)
IX3003						AT %IX300.3	:BOOL;	 (* 	SPARE	*)
IX3004						AT %IX300.4	:BOOL;	 (* 	SPARE	*)
IX3005						AT %IX300.5	:BOOL;	 (* 	SPARE	*)
IX3006						AT %IX300.6	:BOOL;	 (* 	SPARE	*)
IX3007						AT %IX300.7	:BOOL;	 (* 	SPARE	*)

IX3010						AT %IX301.2	:BOOL;	 (* 	SPARE	*)
IX3011						AT %IX301.3	:BOOL;	 (* 	SPARE	*)
IX3012						AT %IX301.2	:BOOL;	 (* 	SPARE	*)
IX3013						AT %IX301.3	:BOOL;	 (* 	SPARE	*)
IX3014						AT %IX301.4	:BOOL;	 (* 	SPARE	*)
IX3015						AT %IX301.5	:BOOL;	 (* 	SPARE	*)
IX3016						AT %IX301.6	:BOOL;	 (* 	SPARE	*)
IX3017						AT %IX301.7	:BOOL;	 (* 	SPARE	*)


(**************************************************************************)
(*VerticalL Field IO *)
IW_360A1					AT %IB310:WORD;
I_EL_Tape_OpeningL_FWD		AT %IX310.0	:BOOL;	 (* 	TAPE OPENING LEFT FWD SENSOR	*)
I_EL_Tape_OpeningL_BWD		AT %IX310.1	:BOOL;	 (* 	TAPE OPENING LEFT BWD SENSOR	*)
I_EL_Tape_OpeningR_FWD		AT %IX310.2	:BOOL;	 (* 	TAPE OPENING RIGHT FWD SENSOR	*)
I_EL_Tape_OpeningR_BWD		AT %IX310.3	:BOOL;	 (* 	TAPE OPENING RIGHT BWD SENSOR	*)
I_EL_Tilt_Fwd				AT %IX310.4	:BOOL;	 (* 	VERTICAL EXIT TILT CYL FWD RS	*)
I_EL_Tilt_Bwd				AT %IX310.5	:BOOL;	 (* 	VERTICAL EXIT TILT CYL BWD RS	*)
I_EL_BeltTensionR_OK		AT %IX310.6	:BOOL;	 (* 	ELEVATOR BELT TENSION RIGHT OK	*)
I_EL_BeltTensionL_OK		AT %IX310.7	:BOOL;	 (* 	ELEVATOR BELT TENSION LEFT OK	*)

IW_361A1					AT %IB311:WORD;
I_EL_Tape_Change_FWD		AT %IX311.0	:BOOL;	 (* 	TAPE CHANGE FWD SENSOR	*)
I_EL_Tape_Change_BWD		AT %IX311.1	:BOOL;	 (* 	TAPE CHANGE BWD SENSOR	*)
I_EL_LOW_EXIT_FULL			AT %IX311.2	:BOOL;	 (* 	ELEVATOR LOW EXIT FULL SENSOR	*)
IX3113						AT %IX311.3	:BOOL;	 (* 	SPARE	*)
IX3114						AT %IX311.4	:BOOL;	 (* 	SPARE	*)
IX3115						AT %IX311.5	:BOOL;	 (* 	SPARE	*)
IX3116						AT %IX311.6	:BOOL;	 (* 	SPARE	*)
IX3117						AT %IX311.7	:BOOL;	 (* 	SPARE	*)

IW_362A1					AT %IB312:WORD;
I_EL_TapeL_Refill_PE		AT %IX312.0	:BOOL;	 (* 	EXIT TAPE LEFT REFILL SENSOR (0=NEED REFILL)	*)
I_EL_TapeL_Empty_PE			AT %IX312.1	:BOOL;	 (* 	EXIT TAPE LEFT EMPTY SENSOR 	*)
I_EL_TapeL_Break_PE			AT %IX312.2	:BOOL;	 (* 	EXIT TAPE LEFT BREAK SENSOR 	*)
I_EL_TapeR_RefilR_PE		AT %IX312.3	:BOOL;	 (* 	EXIT TAPE RIGHT REFILL SENSOR (0=NEED REFILL)	*)
I_EL_TapeR_Empty_PE			AT %IX312.4	:BOOL;	 (* 	EXIT TAPE LEFT EMPTY SENSOR 	*)
I_EL_TapeR_Break_PE			AT %IX312.5	:BOOL;	 (* 	EXIT TAPE LEFT BREAK SENSOR 	*)
I_EL_DriveBeltTension_OK	AT %IX312.6	:BOOL;	 (* 	ELEVATOR DRIVE BELT TENSION OK	*)
I_EL_Tilt_VacSw				AT %IX312.7	:BOOL;	 (* 	VERTICAL EXIT TILT VACUUM SWITCH	*)


QW_341DO1					AT %QB300:WORD;						    
QX3000						AT %QX300.0	:BOOL;	 (* 	SPARE	*)
QX3001						AT %QX300.1	:BOOL;	 (* 	SPARE	*)
QX3002						AT %QX300.2	:BOOL;	 (* 	SPARE	*)
O_EL_LC_Mute1				AT %QX310.3	:BOOL;	 (* 	ELEVATOR - MUTE LIGHT CURTAIN	*)
O_EL_LC_Mute2				AT %QX310.4	:BOOL;	 (* 	ELEVATOR - MUTE LIGHT CURTAIN	*)
QX3005						AT %QX300.5	:BOOL;	 (* 	SPARE	*)
QX3006						AT %QX300.6	:BOOL;	 (* 	SPARE	*)
QX3007						AT %QX300.7	:BOOL;	 (* 	SPARE	*)					


QW_363A1					AT %QB310:WORD;	
O_EL_Tilt_Vac_On			AT %QX310.0	:BOOL;	 (* 	7Y1 - EXIT TILT UNIT VACUUM VALVE ON	*)
QX3101						AT %QX310.3	:BOOL;	 (* 	SPARE	*)
QX3102						AT %QX310.4	:BOOL;	 (* 	SPARE	*)
QX3103						AT %QX310.3	:BOOL;	 (* 	SPARE	*)
QX3104						AT %QX310.4	:BOOL;	 (* 	SPARE	*)
QX3105						AT %QX310.5	:BOOL;	 (* 	SPARE	*)
QX3106						AT %QX310.6	:BOOL;	 (* 	SPARE	*)
QX3107						AT %QX310.7	:BOOL;	 (* 	SPARE	*)

IW_364A1					AT %IB313:WORD;
I_EL_PushRot_Up				AT %IX313.0	:BOOL;	 (* 	ELEVATOR PUSHER ROTATE CYL UP RS	*)
I_EL_PushRot_Dn				AT %IX313.1	:BOOL;	 (* 	ELEVATOR PUSHER ROTATE CYL DN RS	*)
I_EL_Pusher_Fwd				AT %IX313.2	:BOOL;	 (* 	8Y1 - ELEVATOR PUSHER CYL FWD SV	*)
I_EL_Pusher_Bwd				AT %IX313.3	:BOOL;	 (* 	8Y1 - ELEVATOR PUSHER CYL BWD SV	*)
I_EL_Center_VacSw			AT %IX313.4	:BOOL;	 (* 	ELEVATOR CARTON CENTERING VACUUM SWITCH	*)
I_EL_Ctn_PE	 				AT %IX313.5	:BOOL;	 (* 	ELEVATOR PRODUCT PRESENCE ON CV SENSOR	*)
IX3136						AT %IX313.6	:BOOL;	 (* 	SPARE	*)
IX3137						AT %IX313.7	:BOOL;	 (* 	SPARE	*)

QW_365A1					AT %QB311:WORD;	
O_EL_PushRot_Up				AT %QX311.0	:BOOL;	 (* 	8Y1 - ELEVATOR PUSHER ROTATE CYL UP SV	*)
O_EL_PushRot_Dn				AT %QX311.1	:BOOL;	 (* 	8Y1 - ELEVATOR PUSHER ROTATE CYL DN SV	*)
Q_EL_Pusher_Fwd				AT %QX311.2	:BOOL;	 (* 	8Y1 - ELEVATOR PUSHER CYL FWD SV	*)
Q_EL_Pusher_Bwd				AT %QX311.3	:BOOL;	 (* 	8Y1 - ELEVATOR PUSHER CYL BWD SV	*)
O_EL_SafeLock_Rel			AT %QX311.4	:BOOL;	 (* 	9Y1 - ELEVATOR SAFETY LOCK RELEASE SV	*)
O_EL_Center_Vac_On			AT %QX311.5	:BOOL;	 (* 	10Y1 - ELEVATOR CARTON CENTERING VACUUM ON	*)
QX3116						AT %QX311.6	:BOOL;	 (* 	SPARE	*)
QX3117						AT %QX311.7	:BOOL;	 (* 	SPARE	*)
*)
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>