<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.2">
  <POU Name="EL_Timers" Id="{fed5f689-0f2c-4d7c-87a5-05f9777438f3}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM EL_Timers
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
EL_Ctn_TON (IN := I_EL_Ctn_PE, pt := T#500MS);

EL_Ctn_TOFF (IN := NOT I_EL_Ctn_PE, pt := T#500MS);

EL_TopCv_Ctn_TON (IN := I_EX_TopCV_Ctn_PE, pt := T#500MS);

EL_TopCv_Ctn_TOFF (IN := NOT I_EX_TopCV_Ctn_PE, pt := T#1S);

EL_BotCv_Ctn_TON (IN := I_EX_BotCV_Ctn_PE, pt := T#500MS);

EL_BotCv_Ctn_TOFF (IN := NOT I_EX_BotCV_Ctn_PE, pt := T#3S);

EL_LC_Safety_TON (IN:= I_LC_SC_OK, pt := T#100MS);



]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>